Need to wrap up k-fold cross validation for linear regression.

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -393,8 +393,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set.seed(100)\n",
+    "train_idx <- sample(x = nrow(cars_df), size = round(.8 * nrow(cars_df), 1), replace = FALSE)\n",
+    "X_train <- cars_df[train_idx, ]\n",
+    "X_test <- cars_df[-train_idx, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model <- glm(dist ~ speed, data = X_train, family = stats::gaussian(link = \"identity\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat <- predict.glm(model, X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -403,24 +440,24 @@
        "\n",
        "Call:\n",
        "glm(formula = dist ~ speed, family = stats::gaussian(link = \"identity\"), \n",
-       "    data = cars_df)\n",
+       "    data = X_train)\n",
        "\n",
        "Deviance Residuals: \n",
        "    Min       1Q   Median       3Q      Max  \n",
-       "-29.069   -9.525   -2.272    9.215   43.201  \n",
+       "-24.726  -11.242   -2.564   10.436   40.565  \n",
        "\n",
        "Coefficients:\n",
        "            Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept) -17.5791     6.7584  -2.601   0.0123 *  \n",
-       "speed         3.9324     0.4155   9.464 1.49e-12 ***\n",
+       "(Intercept) -20.1796     7.8254  -2.579   0.0139 *  \n",
+       "speed         4.2582     0.4947   8.608 1.85e-10 ***\n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "(Dispersion parameter for gaussian family taken to be 236.5317)\n",
+       "(Dispersion parameter for gaussian family taken to be 240.0262)\n",
        "\n",
-       "    Null deviance: 32539  on 49  degrees of freedom\n",
-       "Residual deviance: 11354  on 48  degrees of freedom\n",
-       "AIC: 419.16\n",
+       "    Null deviance: 26908  on 39  degrees of freedom\n",
+       "Residual deviance:  9121  on 38  degrees of freedom\n",
+       "AIC: 336.69\n",
        "\n",
        "Number of Fisher Scoring iterations: 2\n"
       ]
@@ -430,8 +467,268 @@
     }
    ],
    "source": [
-    "summary.glm(model)"
+    "summary(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_yhat_df <- tibble(\"y\" = X_test$dist, \"yhat\" = yhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 10 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>y</th><th scope=col>yhat</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 4</td><td> 9.627845</td></tr>\n",
+       "\t<tr><td>16</td><td>13.886057</td></tr>\n",
+       "\t<tr><td>34</td><td>35.177120</td></tr>\n",
+       "\t<tr><td>20</td><td>43.693545</td></tr>\n",
+       "\t<tr><td>40</td><td>47.951757</td></tr>\n",
+       "\t<tr><td>42</td><td>56.468182</td></tr>\n",
+       "\t<tr><td>32</td><td>64.984607</td></tr>\n",
+       "\t<tr><td>54</td><td>77.759245</td></tr>\n",
+       "\t<tr><td>70</td><td>82.017457</td></tr>\n",
+       "\t<tr><td>85</td><td>86.275670</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 10 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " y & yhat\\\\\n",
+       " <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t  4 &  9.627845\\\\\n",
+       "\t 16 & 13.886057\\\\\n",
+       "\t 34 & 35.177120\\\\\n",
+       "\t 20 & 43.693545\\\\\n",
+       "\t 40 & 47.951757\\\\\n",
+       "\t 42 & 56.468182\\\\\n",
+       "\t 32 & 64.984607\\\\\n",
+       "\t 54 & 77.759245\\\\\n",
+       "\t 70 & 82.017457\\\\\n",
+       "\t 85 & 86.275670\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 10 × 2\n",
+       "\n",
+       "| y &lt;dbl&gt; | yhat &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "|  4 |  9.627845 |\n",
+       "| 16 | 13.886057 |\n",
+       "| 34 | 35.177120 |\n",
+       "| 20 | 43.693545 |\n",
+       "| 40 | 47.951757 |\n",
+       "| 42 | 56.468182 |\n",
+       "| 32 | 64.984607 |\n",
+       "| 54 | 77.759245 |\n",
+       "| 70 | 82.017457 |\n",
+       "| 85 | 86.275670 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   y  yhat     \n",
+       "1   4  9.627845\n",
+       "2  16 13.886057\n",
+       "3  34 35.177120\n",
+       "4  20 43.693545\n",
+       "5  40 47.951757\n",
+       "6  42 56.468182\n",
+       "7  32 64.984607\n",
+       "8  54 77.759245\n",
+       "9  70 82.017457\n",
+       "10 85 86.275670"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y_yhat_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A matrix: 2 × 2 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>y</th><th scope=col>yhat</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>y</th><td>1.0000000</td><td>0.9029504</td></tr>\n",
+       "\t<tr><th scope=row>yhat</th><td>0.9029504</td><td>1.0000000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 2 of type dbl\n",
+       "\\begin{tabular}{r|ll}\n",
+       "  & y & yhat\\\\\n",
+       "\\hline\n",
+       "\ty & 1.0000000 & 0.9029504\\\\\n",
+       "\tyhat & 0.9029504 & 1.0000000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 2 of type dbl\n",
+       "\n",
+       "| <!--/--> | y | yhat |\n",
+       "|---|---|---|\n",
+       "| y | 1.0000000 | 0.9029504 |\n",
+       "| yhat | 0.9029504 | 1.0000000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     y         yhat     \n",
+       "y    1.0000000 0.9029504\n",
+       "yhat 0.9029504 1.0000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.902950446863124"
+      ],
+      "text/latex": [
+       "0.902950446863124"
+      ],
+      "text/markdown": [
+       "0.902950446863124"
+      ],
+      "text/plain": [
+       "[1] 0.9029504"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor_acc <- cor(as.matrix(y_yhat_df))\n",
+    "cor_acc\n",
+    "cor_acc[\"y\", \"yhat\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Min-Max accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.731113084559361"
+      ],
+      "text/latex": [
+       "0.731113084559361"
+      ],
+      "text/markdown": [
+       "0.731113084559361"
+      ],
+      "text/plain": [
+       "[1] 0.7311131"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "min_max_acc <- mean(apply(y_yhat_df, 1, min) / apply(y_yhat_df, 1, max))\n",
+    "min_max_acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean absolute percentage error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.495909629032088"
+      ],
+      "text/latex": [
+       "0.495909629032088"
+      ],
+      "text/markdown": [
+       "0.495909629032088"
+      ],
+      "text/plain": [
+       "[1] 0.4959096"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mape <- mean(abs(y_yhat_df$yhat - y_yhat_df$y) / y_yhat_df$y)\n",
+    "mape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO: K-fold CV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
