--- a/statistical_tests.ipynb
+++ b/statistical_tests.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,13 +192,13 @@
        "\tWelch Two Sample t-test\n",
        "\n",
        "data:  x5 and x6\n",
-       "t = 1.007, df = 62.527, p-value = 0.3178\n",
+       "t = -0.24561, df = 53.812, p-value = 0.8069\n",
        "alternative hypothesis: true difference in means is not equal to 0\n",
        "95 percent confidence interval:\n",
-       " -0.2055402  0.6229533\n",
+       " -0.5830865  0.4558216\n",
        "sample estimates:\n",
        "mean of x mean of y \n",
-       "10.165379  9.956673 \n"
+       " 9.886474  9.950107 \n"
       ]
      },
      "metadata": {},
@@ -211,13 +211,13 @@
        "\tWelch Two Sample t-test\n",
        "\n",
        "data:  x7 and x8\n",
-       "t = 30.959, df = 95.975, p-value < 2.2e-16\n",
+       "t = 34.787, df = 86.831, p-value < 2.2e-16\n",
        "alternative hypothesis: true difference in means is not equal to 0\n",
        "95 percent confidence interval:\n",
-       "  9.261359 10.530342\n",
+       "  9.721004 10.899201\n",
        "sample estimates:\n",
        "mean of x mean of y \n",
-       "14.880246  4.984395 \n"
+       "  15.1831    4.8730 \n"
       ]
      },
      "metadata": {},
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "\tShapiro-Wilk normality test\n",
        "\n",
        "data:  x8\n",
-       "W = 0.97276, p-value = 0.2986\n"
+       "W = 0.97511, p-value = 0.3684\n"
       ]
      },
      "metadata": {},
@@ -282,7 +282,7 @@
        "\tShapiro-Wilk normality test\n",
        "\n",
        "data:  x9\n",
-       "W = 0.94634, p-value = 0.02419\n"
+       "W = 0.93965, p-value = 0.01305\n"
       ]
      },
      "metadata": {},
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "\tTwo-sample Kolmogorov-Smirnov test\n",
        "\n",
        "data:  x10 and x11\n",
-       "D = 0.28, p-value = 0.03919\n",
+       "D = 0.16, p-value = 0.5487\n",
        "alternative hypothesis: two-sided\n"
       ]
      },
@@ -336,7 +336,7 @@
        "\tTwo-sample Kolmogorov-Smirnov test\n",
        "\n",
        "data:  x10 and x12\n",
-       "D = 0.26, p-value = 0.06779\n",
+       "D = 0.28, p-value = 0.03919\n",
        "alternative hypothesis: two-sided\n"
       ]
      },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -419,13 +419,13 @@
        "\tF test to compare two variances\n",
        "\n",
        "data:  x10 and x12\n",
-       "F = 0.17943, num df = 49, denom df = 49, p-value = 1.454e-08\n",
+       "F = 0.15636, num df = 49, denom df = 49, p-value = 1.257e-09\n",
        "alternative hypothesis: true ratio of variances is not equal to 1\n",
        "95 percent confidence interval:\n",
-       " 0.1018250 0.3161979\n",
+       " 0.0887287 0.2755300\n",
        "sample estimates:\n",
        "ratio of variances \n",
-       "         0.1794348 \n"
+       "         0.1563567 \n"
       ]
      },
      "metadata": {},
@@ -438,13 +438,13 @@
        "\tF test to compare two variances\n",
        "\n",
        "data:  x10 and x13\n",
-       "F = 1.2045, num df = 49, denom df = 49, p-value = 0.5174\n",
+       "F = 0.838, num df = 49, denom df = 49, p-value = 0.5385\n",
        "alternative hypothesis: true ratio of variances is not equal to 1\n",
        "95 percent confidence interval:\n",
-       " 0.6835053 2.1224947\n",
+       " 0.4755475 1.4767215\n",
        "sample estimates:\n",
        "ratio of variances \n",
-       "          1.204465 \n"
+       "         0.8380043 \n"
       ]
      },
      "metadata": {},
@@ -457,11 +457,355 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Chi Squared Test\n",
+    "\n",
+    "Null Hypothesis: categorical variables are independent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 14 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>gte_7_ft</th><th scope=col>pro_player</th></tr>\n",
+       "\t<tr><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> TRUE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td> TRUE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 14 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " gte\\_7\\_ft & pro\\_player\\\\\n",
+       " <lgl> & <lgl>\\\\\n",
+       "\\hline\n",
+       "\t  TRUE &  TRUE\\\\\n",
+       "\t FALSE & FALSE\\\\\n",
+       "\t  TRUE &  TRUE\\\\\n",
+       "\t FALSE & FALSE\\\\\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\t FALSE &  TRUE\\\\\n",
+       "\t  TRUE &  TRUE\\\\\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\t FALSE & FALSE\\\\\n",
+       "\t FALSE & FALSE\\\\\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\t FALSE & FALSE\\\\\n",
+       "\t  TRUE &  TRUE\\\\\n",
+       "\t  TRUE &  TRUE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 14 × 2\n",
+       "\n",
+       "| gte_7_ft &lt;lgl&gt; | pro_player &lt;lgl&gt; |\n",
+       "|---|---|\n",
+       "|  TRUE |  TRUE |\n",
+       "| FALSE | FALSE |\n",
+       "|  TRUE |  TRUE |\n",
+       "| FALSE | FALSE |\n",
+       "|  TRUE | FALSE |\n",
+       "| FALSE |  TRUE |\n",
+       "|  TRUE |  TRUE |\n",
+       "|  TRUE | FALSE |\n",
+       "| FALSE | FALSE |\n",
+       "| FALSE | FALSE |\n",
+       "|  TRUE | FALSE |\n",
+       "| FALSE | FALSE |\n",
+       "|  TRUE |  TRUE |\n",
+       "|  TRUE |  TRUE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   gte_7_ft pro_player\n",
+       "1   TRUE     TRUE     \n",
+       "2  FALSE    FALSE     \n",
+       "3   TRUE     TRUE     \n",
+       "4  FALSE    FALSE     \n",
+       "5   TRUE    FALSE     \n",
+       "6  FALSE     TRUE     \n",
+       "7   TRUE     TRUE     \n",
+       "8   TRUE    FALSE     \n",
+       "9  FALSE    FALSE     \n",
+       "10 FALSE    FALSE     \n",
+       "11  TRUE    FALSE     \n",
+       "12 FALSE    FALSE     \n",
+       "13  TRUE     TRUE     \n",
+       "14  TRUE     TRUE     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "bball_df <- tibble(\n",
+    "    \"gte_7_ft\" = c(TRUE, FALSE, TRUE, FALSE, TRUE, FALSE, TRUE, TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE),\n",
+    "    \"pro_player\" = c(TRUE, FALSE, TRUE, FALSE, FALSE, TRUE, TRUE, FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, TRUE)\n",
+    ")\n",
+    "bball_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in chisq.test(table(bball_df)):\n",
+      "“Chi-squared approximation may be incorrect”\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's Chi-squared test with Yates' continuity correction\n",
+       "\n",
+       "data:  table(bball_df)\n",
+       "X-squared = 1.3672, df = 1, p-value = 0.2423\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "chisq.test(table(bball_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        pro_player\n",
+       "gte_7_ft FALSE TRUE\n",
+       "   FALSE     5    1\n",
+       "   TRUE      3    4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(bball_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation Test\n",
+    "\n",
+    "Null Hypothesis: $cor(X_1, X_2) = 0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  cars$dist and cars$speed\n",
+       "t = 9.464, df = 48, p-value = 1.49e-12\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " 0.6816422 0.8862036\n",
+       "sample estimates:\n",
+       "      cor \n",
+       "0.8068949 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cars_df <- as_tibble(cars)\n",
+    "cor.test(cars$dist, cars$speed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fisher's Exact Test\n",
+    "\n",
+    "Null Hypothesis: rows and columns are independent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 9 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>smoker</th><th scope=col>athlete</th></tr>\n",
+       "\t<tr><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>FALSE</td><td> TRUE</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 9 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " smoker & athlete\\\\\n",
+       " <lgl> & <lgl>\\\\\n",
+       "\\hline\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\t  TRUE &  TRUE\\\\\n",
+       "\t FALSE &  TRUE\\\\\n",
+       "\t FALSE &  TRUE\\\\\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\t FALSE & FALSE\\\\\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\t FALSE &  TRUE\\\\\n",
+       "\t  TRUE & FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 9 × 2\n",
+       "\n",
+       "| smoker &lt;lgl&gt; | athlete &lt;lgl&gt; |\n",
+       "|---|---|\n",
+       "|  TRUE | FALSE |\n",
+       "|  TRUE |  TRUE |\n",
+       "| FALSE |  TRUE |\n",
+       "| FALSE |  TRUE |\n",
+       "|  TRUE | FALSE |\n",
+       "| FALSE | FALSE |\n",
+       "|  TRUE | FALSE |\n",
+       "| FALSE |  TRUE |\n",
+       "|  TRUE | FALSE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  smoker athlete\n",
+       "1  TRUE  FALSE  \n",
+       "2  TRUE   TRUE  \n",
+       "3 FALSE   TRUE  \n",
+       "4 FALSE   TRUE  \n",
+       "5  TRUE  FALSE  \n",
+       "6 FALSE  FALSE  \n",
+       "7  TRUE  FALSE  \n",
+       "8 FALSE   TRUE  \n",
+       "9  TRUE  FALSE  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "athlete_df <- tibble(\n",
+    "    \"smoker\" = c(TRUE, TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, FALSE, TRUE),\n",
+    "    \"athlete\" = c(FALSE, TRUE, TRUE, TRUE, FALSE, FALSE, FALSE, TRUE, FALSE)\n",
+    ")\n",
+    "athlete_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tFisher's Exact Test for Count Data\n",
+       "\n",
+       "data:  table(athlete_df)\n",
+       "p-value = 0.2063\n",
+       "alternative hypothesis: true odds ratio is not equal to 1\n",
+       "95 percent confidence interval:\n",
+       " 0.001288082 3.255946155\n",
+       "sample estimates:\n",
+       "odds ratio \n",
+       " 0.1196876 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tFisher's Exact Test for Count Data\n",
+       "\n",
+       "data:  table(bball_df)\n",
+       "p-value = 0.1375\n",
+       "alternative hypothesis: true odds ratio is not equal to 1\n",
+       "95 percent confidence interval:\n",
+       "   0.4514166 469.3251580\n",
+       "sample estimates:\n",
+       "odds ratio \n",
+       "  7.054394 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fisher.test(table(athlete_df))\n",
+    "fisher.test(table(bball_df))"
+   ]
   }
  ],
  "metadata": {
